# SciELO_scraper

./: .gitignore  ALGORITMO_EXTRACAO.md  ALGORITMO_EXTRACAO.mmd  CLAUDE.md  MANUAL.md  README.md  _gerar_fluxograma.py  create_charts.py  enriquecedor_csv.py  gerar_graficos.py  main.py  prisma_workflow.py  process_charts.py  pyproject.toml  results_report.py  run_pipeline.py  scielo_scraper.py  scielo_search.py  scielo_wordcloud.py  terms_matcher.py  teste_pipeline.py
.claude/skills/scielo-analysis/: SKILL.md
.claude/skills/scielo-communication/: SKILL.md
.claude/skills/scielo-methodology/: SKILL.md
assets/: PRISMAdiagram.json
docs/: ALGORITMO_EXTRACAO.md  MANUAL.md
exemplos/2022/: ANALISE_DISCREPANCIA_2022.md  avalia_educa_2022.csv  relatorio.md
exemplos/2022/avalia_educa_2022_new_20260409_232434/: resultado.csv  stats.json
exemplos/2022/avalia_educa_2022_new_20260409_235350/: resultado.csv  stats.json
exemplos/2022/avalia_educa_2022_new_20260410_003039/: resultado.csv  stats.json
exemplos/2023/: ANALISE_DISCREPANCIA_2023.md
exemplos/2024/: ANALISE_DISCREPANCIA_2024.md
exemplos/2025/: ANALISE_DISCREPANCIA_2025.md  search_20260410_092317.csv  search_20260410_184300.csv
exemplos/2025/search_20260410_184300_new_20260410_195239/: resultado.csv  stats.json
exemplos/2025/search_20260410_184300_new_20260410_210640/: resultado.csv  stats.json
exemplos/2025/search_20260410_184300_new_20260411_095735/: resultado.csv  stats.json
