[project]
name = "scielo-scraper"
version = "2.4"
description = "Conjunto de ferramentas para busca, extração e análise de artigos SciELO — projeto e-Aval (Estado da Arte da Avaliação)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # scraping
    "requests>=2.33.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "brotli>=1.1.0",
    # dados
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "wakepy>=0.9.0",
    # gráficos (process_charts, results_report)
    "matplotlib>=3.8.0",
    # results_report — Venn/UpSet (opcionais mas recomendados)
    "matplotlib-venn>=0.11.10",
    "upsetplot>=0.9.0",
    # scielo_wordcloud
    "wordcloud>=1.9.0",
    "nltk>=3.8.0",
    "pillow>=10.0.0",
    # prisma_workflow
    "reportlab>=4.0.0",
]
